ToolList correct overflow scroll behaviour

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,6 +105,25 @@ a {
     box-sizing: border-box;
 }
 
+/* Hide scrollbar for Firefox */
+.no-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: transparent transparent;
+}
+
+/* Hide scrollbar for Webkit browsers (Chrome, Safari) */
+.no-scrollbar::-webkit-scrollbar {
+    width: 0; /* Adjust the width as needed */
+}
+
+.no-scrollbar::-webkit-scrollbar-thumb {
+    background-color: transparent;
+}
+
+.no-scrollbar::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
 @layer components {
     .text-gradient {
         -webkit-text-fill-color: transparent;
